objects/Feeding_Trial_Track_Sheet__c.object
<CustomObject>
    <description>Captures Feeding Trial Track Sheet data for Feeding Trials</description>
    <fields>
        <fullName>After_Picture__c</fullName>
        <description>Horse - After Picture of the Horse</description>
        <label>After Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_BW_Measurement_days__c</fullName>
        <description>Age of the Calf at BW Measurement (days) (Number)</description>
        <formula>Birth_Weight_Measurement_Date__c -  Birth_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at BW Measurement (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_WW_Measurement_days__c</fullName>
        <description>Age at WW Measure-ment (days)</description>
        <formula>Age_at_BW_Measurement_days__c +  Days_Between_Measurements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at WW Measurement (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_ID__c</fullName>
        <description>ID for the Feeing Trial Show Animal</description>
        <label>Animal ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Gain__c</fullName>
        <description>Average Daily Gain (lbs)</description>
        <formula>IF(Days_Between_Measurements__c = 0, 0.00, (End_Weight_lbs__c -  Starting_Weight_lbs__c )/Days_Between_Measurements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Daily Gain (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Before_Picture__c</fullName>
        <description>Horse - Before Picture of Horse</description>
        <label>Before Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <description>Birth Date for the Calf</description>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Weight_Measurement_Date__c</fullName>
        <description>Birth Weight Measure-ment Date for the Calf</description>
        <label>Birth Weight Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bloom__c</fullName>
        <description>Bloom for the Feeding Trial Show Animal</description>
        <label>Bloom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body_Composition__c</fullName>
        <description>Body Composition for the Feeding Trial Track Sheet</description>
        <label>Body Composition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breed_of_Horse__c</fullName>
        <label>Breed of Horse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarter Horse</fullName>
                </value>
                <value>
                    <fullName>Thoroughbred</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Appaloosa</fullName>
                </value>
                <value>
                    <fullName>Arabian</fullName>
                </value>
                <value>
                    <fullName>Morgan</fullName>
                </value>
                <value>
                    <fullName>Saddlebred</fullName>
                </value>
                <value>
                    <fullName>Standardbred</fullName>
                </value>
                <value>
                    <fullName>Warmblood</fullName>
                </value>
                <value>
                    <fullName>Pony</fullName>
                </value>
                <value>
                    <fullName>Miniature</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Draft Pony</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calf_ID__c</fullName>
        <description>ID for Calf</description>
        <label>Calf ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Between_Measurements__c</fullName>
        <description>Days Between Measurements between Birth Weight Measurement date and the Weaning Weight Measurement Date</description>
        <formula>Weaning_Weight_Measurement_Date__c - Birth_Weight_Measurement_Date__c</formula>
        <label>Days Between Measurements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline_Activity__c</fullName>
        <label>Discipline/Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Breeding</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Pleasure</fullName>
                </value>
                <value>
                    <fullName>Race</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discipline_Operation__c</fullName>
        <inlineHelpText>Describe how the animal is used.</inlineHelpText>
        <label>Discipline/Operation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_BCS__c</fullName>
        <label>End BCS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Height_in__c</fullName>
        <description>Ending Height of the Calf</description>
        <label>End Height (in)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Weight__c</fullName>
        <label>End Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Weight_lbs__c</fullName>
        <label>End Weight (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feeding_Trial__c</fullName>
        <label>Feeding Trial</label>
        <referenceTo>Feeding_Trial__c</referenceTo>
        <relationshipLabel>Feeding Trial Track Sheets</relationshipLabel>
        <relationshipName>Feeding_Trial_Track_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal_BCS__c</fullName>
        <description>Goal BCS for the Horse at the end of the Feeding Trial</description>
        <label>Goal BCS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Horse_Name__c</fullName>
        <label>Horse Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingredient__c</fullName>
        <description>Cattle - Ingredient to be manually added when adding a new Track Sheet to the Cattle Feeding Trial</description>
        <label>Ingredient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <description>Intake for the Feeding Trial Track Sheet</description>
        <label>Intake</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lbs_Fed__c</fullName>
        <description>Cattle - Number of lbs fed to the cattle for the product selected during the feeding trial</description>
        <label>Lbs Fed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifestage__c</fullName>
        <description>Horse - Lifestage of the Horse in the Feeding Trial</description>
        <label>Lifestage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breeding Stallion</fullName>
                </value>
                <value>
                    <fullName>Brood Mares</fullName>
                </value>
                <value>
                    <fullName>Foals</fullName>
                </value>
                <value>
                    <fullName>Show Performance</fullName>
                </value>
                <value>
                    <fullName>Weaning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Feed_Lbs_per_day__c</fullName>
        <label>Old Feed (lbs per day)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Feed_Name__c</fullName>
        <description>Old Feed Name used by the Horse for the Feeding Trial</description>
        <label>Old Feed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Observations__c</fullName>
        <label>Other Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Horse - Other field if &apos;Other&apos; is selected for Breed of Horse. A validation rule prevents save unless this field is filled out and &apos;Other is selected for Breed of Horse</description>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Palatability__c</fullName>
        <description>Palatability for the Feeding Trial Show Animal</description>
        <label>Palatability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pellet_Quality__c</fullName>
        <description>Pellet Quality for the Feeding Trial Show Animal</description>
        <label>Pellet Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_or_Additional_Comments__c</fullName>
        <description>Any additional permforance or general notes from the Sales Rep about the Show Animal</description>
        <label>Performance or Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Product2.Feeding_Trial_Product__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Specie__c</field>
                <operation>equals</operation>
                <valueField>Product2.Specie__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Feeding Trial Track Sheets</relationshipLabel>
        <relationshipName>Feeding_Trial_Track_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equine Adult® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Junior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Active Healthy Edge®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #100®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #200®</fullName>
                </value>
                <value>
                    <fullName>Purina® Miniature Horse and Pony</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 50# Bag</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 30# Pail</fullName>
                </value>
                <value>
                    <fullName>Athlete®</fullName>
                </value>
                <value>
                    <fullName>Enrich Plus™ Supplement</fullName>
                </value>
                <value>
                    <fullName>Omolene #100® Active Pleasure</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance (RT)</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance</fullName>
                </value>
                <value>
                    <fullName>Omolene #300® Growth</fullName>
                </value>
                <value>
                    <fullName>Omolene #400® Complete Advantage™</fullName>
                </value>
                <value>
                    <fullName>Omolene #500® Competition</fullName>
                </value>
                <value>
                    <fullName>Race Ready® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® AX Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® Healthy Edge® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bag</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bulk</fullName>
                </value>
                <value>
                    <fullName>Ultium® Competition Horse Formula</fullName>
                </value>
                <value>
                    <fullName>Ultium® Growth Horse Formula</fullName>
                </value>
                <value>
                    <fullName>WellSolve L/S®</fullName>
                </value>
                <value>
                    <fullName>WellSolve W/C®</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purina_Feed_Name__c</fullName>
        <label>Purina Feed Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equine Adult® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Junior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Equine Senior® Active Healthy Edge®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #100®</fullName>
                </value>
                <value>
                    <fullName>Horse Chow #200®</fullName>
                </value>
                <value>
                    <fullName>Purina® Miniature Horse and Pony</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 50# Bag</fullName>
                </value>
                <value>
                    <fullName>Amplify® Nugget 30# Pail</fullName>
                </value>
                <value>
                    <fullName>Athlete®</fullName>
                </value>
                <value>
                    <fullName>Enrich Plus™ Supplement</fullName>
                </value>
                <value>
                    <fullName>Omolene #100® Active Pleasure</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance (RT)</fullName>
                </value>
                <value>
                    <fullName>Omolene #200® Performance</fullName>
                </value>
                <value>
                    <fullName>Omolene #300® Growth</fullName>
                </value>
                <value>
                    <fullName>Omolene #400® Complete Advantage™</fullName>
                </value>
                <value>
                    <fullName>Omolene #500® Competition</fullName>
                </value>
                <value>
                    <fullName>Race Ready® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® AX Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® Healthy Edge® Horse Feed</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bag</fullName>
                </value>
                <value>
                    <fullName>Strategy® GX Bulk</fullName>
                </value>
                <value>
                    <fullName>Ultium® Competition Horse Formula</fullName>
                </value>
                <value>
                    <fullName>Ultium® Growth Horse Formula</fullName>
                </value>
                <value>
                    <fullName>WellSolve L/S®</fullName>
                </value>
                <value>
                    <fullName>WellSolve W/C®</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purina_Feed_lbs_per_day__c</fullName>
        <label>Purina Feed (lbs per day)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specie__c</fullName>
        <description>used to filter the products available for the specie</description>
        <label>Specie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Show - Cattle</fullName>
                </value>
                <value>
                    <fullName>Show - Goat</fullName>
                </value>
                <value>
                    <fullName>Show - Lamb</fullName>
                </value>
                <value>
                    <fullName>Show - Swine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_BCS__c</fullName>
        <label>Start BCS</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Height__c</fullName>
        <description>Height of the Calf (inches)</description>
        <label>Starting Height (in)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Weight__c</fullName>
        <label>Starting Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starting_Weight_lbs__c</fullName>
        <label>Starting Weight (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stool_Consistency__c</fullName>
        <description>Stool Consistency for the Feeding Trial Show Animal</description>
        <label>Stool Consistency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <description>Cattle - lbs fed x cost per lb.</description>
        <formula>Lbs_Fed__c *  cost_lb__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Cattle - if the track sheet is a Product or an Ingredient</description>
        <formula>TEXT(Product__r.Type__c )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaning_Weight_Measurement_Date__c</fullName>
        <description>Weaning Weight Measure-ment Date for the Calf</description>
        <label>Weaning Weight Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight_Gain__c</fullName>
        <description>Weight Gain for the Feeding Trial Show Animal</description>
        <label>Weight Gain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cost_lb__c</fullName>
        <defaultValue>0</defaultValue>
        <description>$/lb for the product selected</description>
        <label>$/lb</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Feeding Trial Track Sheet</label>
    <nameField>
        <displayFormat>FT Sheet-{00000000}</displayFormat>
        <label>Feeding Trial Track Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feeding Trial Track Sheets</pluralLabel>
    <recordTypes>
        <fullName>Dairy</fullName>
        <active>true</active>
        <description>Dairy Feeding Trial Track Sheet</description>
        <label>Dairy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deer</fullName>
        <active>true</active>
        <description>Deer Feeding Trial Track Sheet</description>
        <label>Deer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Horse</fullName>
        <active>true</active>
        <description>Horse Feeding Trial Track Sheet</description>
        <label>Horse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ingredient</fullName>
        <active>true</active>
        <description>Cattle Feeding Trial Track Sheet Ingredient</description>
        <label>Ingredient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Cattle Feeding Trial Track Sheet Product</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Cattle</fullName>
        <active>true</active>
        <description>Show - Cattle Feeding Trial Track Sheet</description>
        <label>Show - Cattle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Goat</fullName>
        <active>true</active>
        <description>Show - Goat Feeding Trial Track Sheet</description>
        <label>Show - Goat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Lamb</fullName>
        <active>true</active>
        <description>Show - Lamb Feeding Trial Track Sheet</description>
        <label>Show - Lamb</label>
    </recordTypes>
    <recordTypes>
        <fullName>Show_Swine</fullName>
        <active>true</active>
        <description>Show - Swine Feeding Trial Track Sheet</description>
        <label>Show - Swine</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Birth_Weight_Measurement_date</fullName>
        <active>true</active>
        <description>Birth Weight Measurement Date cannot be before birth date</description>
        <errorConditionFormula>RecordType.Name = &apos;Dairy&apos;
&amp;&amp;
Birth_Date__c &gt; Birth_Weight_Measurement_Date__c</errorConditionFormula>
        <errorDisplayField>Birth_Weight_Measurement_Date__c</errorDisplayField>
        <errorMessage>Birth Weight Measurement Date cannot be before Birth Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Birth_date_Cannot_be_in_Future</fullName>
        <active>true</active>
        <description>The birth date cannot be in the future</description>
        <errorConditionFormula>Birth_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Birth date cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Cost_Lb_Fed</fullName>
        <active>true</active>
        <description>Prevents $/lb from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Ingredient&apos;, 
RecordType.Name = &apos;Product&apos;) 
&amp;&amp; 
cost_lb__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>cost_lb__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cattle_Lbs_Fed</fullName>
        <active>true</active>
        <description>Prevents Lbs Fed from being a negative number</description>
        <errorConditionFormula>OR( 
RecordType.Name = &apos;Ingredient&apos;, 
RecordType.Name = &apos;Product&apos;) 
&amp;&amp; 
Lbs_Fed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Lbs_Fed__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dairy_End_Height_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>End Height cannot be negative for Dairy Feeding Trials</description>
        <errorConditionFormula>RecordType.Name = &apos;Dairy&apos;
&amp;&amp;
 End_Height_in__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_Height_in__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dairy_End_Weight_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>End Weight cannot be negative for Dairy Feeding Trials</description>
        <errorConditionFormula>RecordType.Name = &apos;Dairy&apos;
&amp;&amp;
End_Weight_lbs__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_Weight_lbs__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dairy_Starting_Height_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>Starting Height cannot be negative for Dairy Feeding Trials</description>
        <errorConditionFormula>RecordType.Name = &apos;Dairy&apos;
&amp;&amp;
Starting_Height__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Starting_Height__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dairy_Starting_Weight_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>Starting Weight cannot be negative for Dairy Feeding Trials</description>
        <errorConditionFormula>RecordType.Name = &apos;Dairy&apos;
&amp;&amp;
Starting_Weight_lbs__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Starting_Weight_lbs__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Horse_Age</fullName>
        <active>true</active>
        <description>Age cannot be a negative number</description>
        <errorConditionFormula>RecordType.Name = &quot;Horse&quot;
&amp;&amp;
Age__c       &lt;=0</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Horse_End_BCS</fullName>
        <active>true</active>
        <description>End BCS cannot be a negative number</description>
        <errorConditionFormula>RecordType.Name = &quot;Horse&quot;
&amp;&amp;
 End_BCS__c     &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_BCS__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Horse_End_Weight</fullName>
        <active>true</active>
        <description>End Weight (lbs) cannot be a negative number</description>
        <errorConditionFormula>RecordType.Name = &quot;Horse&quot;
&amp;&amp;
 End_Weight_lbs__c      &lt;= 0</errorConditionFormula>
        <errorDisplayField>End_Weight_lbs__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Horse_Goal_BCS</fullName>
        <active>true</active>
        <description>Goal BCS cannot be a negative number</description>
        <errorConditionFormula>RecordType.Name = &quot;Horse&quot;
&amp;&amp;
 Goal_BCS__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Goal_BCS__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Horse_Old_Feed_Lbs_Per_Day</fullName>
        <active>true</active>
        <description>Old Feed Lbs Per Day cannot be a negative number</description>
        <errorConditionFormula>RecordType.Name = &quot;Horse&quot;
&amp;&amp;
Old_Feed_Lbs_per_day__c    &lt;= 0</errorConditionFormula>
        <errorDisplayField>Old_Feed_Lbs_per_day__c</errorDisplayField>
        <errorMessage>Invalid Number</errorMessage>
    </validationRules>
</CustomObject>